--- a/index.html
+++ b/index.html
@@ -1,42 +1,39 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
     <title>My Website</title>
   </head>
   <body>
     <div class="navbar">
-      <div class="container flex">
-        <h1 class="logo">TechForest</h1>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="languages.html">Coding Languages</a></li>
-            <li><a href="docs.html">Docs</a></li>
-          </ul>
-        </nav>
-      </div>
+      <div class="icon">Let's Learn</div>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li>
+          <a href="languages.html">Technology</a>
+          <div class="dropdown">
+            <ul>
+              <li class="hover-me">
+                <a href="#">Java</a>
+                <div class="dropdown-2">
+                  <ul>
+                    <li><a href="#">Basic Java</a></li>
+                    <li><a href="#">Core Java</a></li>
+                    <li><a href="#">Collection Framework</a></li>
+                    <li><a href="#">Interview Questions</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li><a href="#">JavaScript</a></li>
+              <li><a href="#">React</a></li>
+            </ul>
+          </div>
+        </li>
+        <li><a href="docs.html">Feedback</a></li>
+      </ul>
     </div>
-
-    <!-- Showcase-->
-    <section class="showcase">
-      <div class="container grid">
-        <div class="showcase-text">
-          <h1>Welcome to my website</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
-            possimus atque harum vel temporibus? Quia aliquid, ullam dolorem,
-            non at, doloremque eaque tempora officia odit nobis nesciunt! Fuga,
-            cum eius.
-          </p>
-        </div>
-      </div>
-    </section>
+    <section></section>
   </body>
 </html>
