--- a/index.html
+++ b/index.html
@@ -4,36 +4,147 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://kit.fontawesome.com/67c66657c7.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+
     <title>My Website</title>
   </head>
   <body>
+    <div class="scroll-up-btn">
+      <i class="fas fa-angle-up"></i>
+    </div>
     <div class="navbar">
-      <div class="icon">Let's Learn</div>
+      <div class="icon">Portfolio.</div>
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="#about">About</a></li>
         <li>
-          <a href="languages.html">Technology</a>
+          <a href="#skills">Skills</a>
           <div class="dropdown">
             <ul>
               <li class="hover-me">
                 <a href="#">Java</a>
-                <div class="dropdown-2">
+                <!-- <div class="dropdown-2">
                   <ul>
                     <li><a href="#">Basic Java</a></li>
                     <li><a href="#">Core Java</a></li>
                     <li><a href="#">Collection Framework</a></li>
                     <li><a href="#">Interview Questions</a></li>
                   </ul>
-                </div>
+                </div> -->
               </li>
               <li><a href="#">JavaScript</a></li>
               <li><a href="#">React</a></li>
             </ul>
           </div>
         </li>
-        <li><a href="docs.html">Feedback</a></li>
+        <li><a href="form.html">Feedback</a></li>
       </ul>
     </div>
-    <section></section>
+    <!-- <section></section> -->
+
+    <!--Home Section Start-->
+
+    <section class="home" id="home">
+      <div class="max-width">
+        <div class="home-content">
+          <div class="text-1">Hello,my name is</div>
+          <div class="text-2">Sagari Senguttuvan</div>
+          <div class="text-3">And I'm a <span class="typing"></span></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About section Start -->
+    <a name="about"></a>
+    <section class="about" id="about">
+      <div class="max-width">
+        <h2 class="title">About me</h2>
+        <div class="about-content">
+          <div class="column left">
+            <img src="images/profile.jpg" alt="" />
+          </div>
+          <div class="column right">
+            <div class="text">I'm Sagari and I'm a <span>Developer</span></div>
+            <p>
+              Software Developer with 2+ years of industry experience building
+              web applications. Specializing in Java with professional
+              experience working with JavaScript, HTML, CSS, React and Spring
+              Framework. Seeking to secure a challenging position as a Full
+              Stack Java Developer.
+            </p>
+            <a
+              href="SagariSenguttuvan -Full Stack Java Developer.docx"
+              download="sagari_resume"
+              >Download CV</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- skills section start -->
+    <a name="skills"></a>
+    <section class="skills" id="skills">
+      <div class="max-width">
+        <h2 class="title">My skills</h2>
+        <div class="skills-content">
+          <div class="column left">
+            <div class="text">My creative skills & experiences.</div>
+            <p>
+              Developed highly interactive UI using HTML, CSS, JavaScript,
+              ensuring a more user-friendly experience for customers. Utilized
+              Java and Spring Boot to design and build backend logic, resulting
+              in a robust application to meet client needs. Implemented CRUD
+              operations using JPA, ensuring an efficient interaction with the
+              database Executed unit testing of applications by developing and
+              applying test cases in JUnit to ensure minimal bugs in the
+              application. Managed version control GIT system and JIRA for
+              tracking issues and project management in agile environment,
+              maintaining the most up-to-date application
+            </p>
+            <a href="#">Read more</a>
+          </div>
+          <div class="column right">
+            <div class="bars">
+              <div class="info">
+                <span>Java</span>
+                <span>90%</span>
+              </div>
+              <div class="line html"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>HTML</span>
+                <span>90%</span>
+              </div>
+              <div class="line css"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>JavaScript</span>
+                <span>70%</span>
+              </div>
+              <div class="line js"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>React</span>
+                <span>60%</span>
+              </div>
+              <div class="line php"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>MySQL</span>
+                <span>70%</span>
+              </div>
+              <div class="line mysql"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="script.js"></script>
   </body>
 </html>
